# aegis-link

./: .env.example  .gitignore  README.md  requirements.txt  setup-aegis-vulnops.ps1
brain/: __init__.py  processor.py
bridge/: __init__.py  server.py
common/: __init__.py  db.py  logger.py
docs/: architecture.md  idempotency.md  logging.md  mcp-tools.md  runbook.md  stix-yara-reference.md
models/: dbt_project.yml  profiles.yml  sources.yml  staged_leads.sql
pulse/: __init__.py  collector.py
vulnops/: __init__.py  agent.py  client.py  db.py  feedback.py  ingestor.py  models.py  pyproject.toml  remediator.py  ticketing.py  verifier.py
vulnops/templates/: change_request.j2  jira_dev.j2  jira_security.j2
